add object, and functions

--- a/class-01-jquery-and-the-dom/pair-assignment/starter-code/index.html
+++ b/class-01-jquery-and-the-dom/pair-assignment/starter-code/index.html
@@ -40,6 +40,7 @@
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js"></script>
     <script type="text/javascript" src="./scripts/blogArticles.js"></script>
     <script type="text/javascript" src="./scripts/article.js"></script>
     </script>
